DeepCloner should launch a checked exception for better detection and handling.